fixed add user input alignment

--- a/src/components/AddUser/AddUser.sass
+++ b/src/components/AddUser/AddUser.sass
@@ -2,8 +2,7 @@
     display: flex
     background: teal
     height: 50px
-    margin-left: -20px
-    left: 400px
+    margin: 5px 0 0 -20px
 
     .inputs
         transform: translateX(-100%);
@@ -16,16 +15,17 @@
             font-size: 20px
             border: none
             outline: none
+            min-width: 300px
             width: 100%
             margin: 0 -39px
             padding: 1px 20px 2px 45px
             border-radius: 99em
+            vertical-align: top
 
         &.open 
             transform: translateX(40px);
 
         button
-            vertical-align: top
             background: lightgreen
             color: white
 
@@ -37,7 +37,7 @@
         cursor: pointer
         border-radius: 50%
         transition: all 300ms ease-in-out
-        margin-top: 6px
+        position: absolute
         z-index: 10
 
         &.close
